fix kubespawner override value

--- a/jupyterhub/config.yaml
+++ b/jupyterhub/config.yaml
@@ -36,8 +36,8 @@ singleuser:
       description: "If you want the additional bells and whistles: Python, R, and Julia."
       kubespawner_override:
         image: jupyter/datascience-notebook:2343e33dec46
-        memory:
-          mem_limit: "1G"
+        mem_limit: "1G"
+        mem_guarantee: "1G"
     - display_name: "Spark environment"
       description: "The Jupyter Stacks spark image!"
       kubespawner_override:
