--- a/jenkins/jenkins.yaml
+++ b/jenkins/jenkins.yaml
@@ -1,4 +1,5 @@
 master:
+  imagePullPolicy: IfNotPresent
   adminPassword: password
   jenkinsUriPrefix: "/jenkins"
   installPlugins:
@@ -8,15 +9,15 @@ master:
     - credentials-binding:1.20
     - git:4.0.0
     - blueocean:1.21.0
-  tolerations:
-    - key: "node-role.kubernetes.io"
-      value: "alice-system"
-      effect: "NoSchedule"
-  ingress:
-    enabled: true
-    annotations:
-      kubernetes.io/ingress.class: nginx
-      # nginx.ingress.kubernetes.io/whitelist-source-range: 203.167.56.0/29
-    path: "/jenkins"
-# serviceAccountAgent:
-#   create: true
+  # tolerations:
+  #   - key: "node-role.kubernetes.io"
+  #     value: "alice-system"
+  #     effect: "NoSchedule"
+  # ingress:
+  #   enabled: true
+  #   annotations:
+  #     kubernetes.io/ingress.class: nginx
+  #     # nginx.ingress.kubernetes.io/whitelist-source-range: 203.167.56.0/29
+  #   path: "/jenkins"
+serviceAccountAgent:
+  create: true
